tutorial/T_PureMethod3.out
T_PureMethod3.java:20: error: Pure methods may not assign to any fields: count in T_PureMethod3.Counter.count()
    //@ assigns count;
                ^
1 error
